objects/Solution_Master__c.object
<CustomObject>
    <fields>
        <fullName>Compet_Names__c</fullName>
        <inlineHelpText>Add a Competitive Intel record to see a value here</inlineHelpText>
        <label>Compet Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_By__c</fullName>
        <label>Group By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GroupBy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOL__c</fullName>
        <label>SOL</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solutions</valueSetName>
        </valueSet>
    </fields>
    <label>Solution Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_By__c</columns>
        <columns>Solution__c</columns>
        <columns>SOL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Solution Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solutions Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>